--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -4,4 +4,4 @@ spring.h2.console.enabled=true
 #defini l'encodage pour data.sql
 spring.datasource.sql-script-encoding=UTF8
 #Les configurations exetrenalisés
-mes-config-ms.commandes-last = 10
+mes-config-ms.commandes_last = 10
