--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -6,6 +6,6 @@ spring.datasource.sql-script-encoding=UTF8
 #Les configurations exetrenalisés
 mes-config-ms.commandes_last = 10
 #Configuration Actuator
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=*
 management.endpoints.web.exposure.include=refresh
 
