--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -4,7 +4,8 @@ spring.h2.console.enabled=true
 #defini l'encodage pour data.sql
 spring.datasource.sql-script-encoding=UTF8
 #Les configurations exetrenalisés
-mes-config-ms.commandes_last = 10
+#mes-config-ms.commandes_last = 10
+mes-configs.limitDeProduits= 5
 #Configuration Actuator
 management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.include=refresh
